Transition tests execution to Shade plugin Fat JAR pattern and enable native access